--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "pj"
 version = "0.1.0"
 authors = ["RoccoDev <roccodev.business@gmail.com>"]
+description = "Reserved for later use."
+license = "GPLv3"
 
 [dependencies]
 serde_json = "1.0"
