--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "pj"
 version = "0.1.0"
 authors = ["RoccoDev <roccodev.business@gmail.com>"]
 description = "Reserved for later use."
-license = "GPLv3"
+license = "GPL-3.0-or-later"
 
 [dependencies]
 serde_json = "1.0"
