--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,10 @@
 name = "pj"
 version = "0.1.0"
 authors = ["RoccoDev <roccodev.business@gmail.com>"]
-description = "Reserved for later use."
+description = "JSON parser and visualizer."
 license = "GPL-3.0-or-later"
+repository = "https://github.com/RoccoDev/pj.git"
+readme = "README.md"
 
 [dependencies]
 serde_json = "1.0"
