--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,10 @@ readme = "README.md"
 
 [dependencies]
 serde_json = "1.0"
-termion = "1.5.1"
-tui = "0.4.0"
+crossterm = "0.6"
+crossterm_input = "0.1.0"
+
+[dependencies.tui]
+git = "https://github.com/fdehau/tui-rs"
+default-features = false
+features = ['crossterm']
