--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,8 @@ crossterm_input = "0.1.0"
 version = "0.4.0"
 default-features = false
 features = ['crossterm']
+[package.metadata.rpm.cargo]
+buildflags = ["--release"]
+
+[package.metadata.rpm.targets]
+pj = { path = "/usr/bin/pj" }
